fixed alignment of arrows

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
 	z-index: 3;
 	opacity: .8;
 	top: 0px;
+	margin-top:330px;
+	margin-left:300px
 }
 
 .thumbnail {
@@ -54,11 +56,19 @@ body {
 	width: 42px;
 }
 
+#prevPhoto:hover{
+	opacity:0.5;
+}
+
 #nextPhoto {
 	height: 42px;
 	width: 42px;
+	margin-left: 550px;
 }
 
+#nextPhoto:hover{
+	opacity:0.5;
+}
 .details p {
 	margin-top: 20px;
 }
@@ -70,12 +80,24 @@ body {
 
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot90 {}
+.rot90 {
+	-ms-transform: rotate(90deg); /* IE 9 */
+    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+    transform: rotate(90deg);
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+	-ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+	-ms-transform: rotate(270deg); /* IE 9 */
+    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+    transform: rotate(270deg);
+}
